# ESP-GRBL-Controller

./: README.md  platformio.ini
data/: config.json  console.html  default.html  grbl.html  home.html  index.html  index_orig.html  info.html  settings_general.html  settings_grbl.html  settings_sd.html  settings_upgrade.html  settings_wifi.html  wifi.html  workspace.code-workspace
data/scripts/: axis_controller.js  connection_controller.js  data_updater.js  gui_utils.js  (+15 more)
esp-32/esp32-grbl/main/: CMakeLists.txt  ThirdPartyLibraries  grbl_board_default_config.h  grbl_config_ini.c  grbl_config_manager.c  grbl_config_manager.h  grbl_file_system.c  grbl_file_system.h  grbl_sd_card_manager.c  grbl_sd_card_manager.h  grbl_updater.c  grbl_updater.h  grbl_utils.c  grbl_utils.h  grbl_wifi.c  grbl_wifi.h  main.c
esp-32/esp32-grbl/main/grbl_http_server/: grbl_default_page.c  grbl_default_page.h  grbl_http_board_info.c  grbl_http_board_info.h  grbl_http_get_file.c  grbl_http_get_file.h  grbl_http_sd.c  grbl_http_sd.h  grbl_http_server.c  grbl_http_server.h  grbl_http_settings_grbl.c  grbl_http_settings_grbl.h  grbl_http_settings_wifi.c  grbl_http_settings_wifi.h  grbl_http_upload_file.c  grbl_http_upload_file.h  grbl_http_utils.c  grbl_http_utils.h
include/: GrblCtrl_Board.h  GrblCtrl_BoardInfo.h  GrblCtrl_Config.h  GrblCtrl_Debug.h  GrblCtrl_Http.h  GrblCtrl_SDManager.h  config.h  controller_board.h
scripts/: convert_to_c.py  res.c
src/: GrblCtrl_Board.cpp  GrblCtrl_Config.cpp  GrblCtrl_Http.cpp  GrblCtrl_HttpDefaultPage.cpp  GrblCtrl_SDManager.cpp  config.cpp  main.cpp
(+27 files in other folders)
